--- a/web/static/index.html
+++ b/web/static/index.html
@@ -8,8 +8,37 @@
 
 <body>
   <div class="logo"><img src="images/logo.svg" style="width:50%"/></div>
-  <div class="feature"><img src="images/charizard.png"></div>	
-  <div class="footer"><img src="images/homes.png" /></div>
+
+<div class="sentence" ng-controller="LabCtrl">
+  <div class="line line1 slide-in">
+  <span class="result adjective slide-in">
+    <span class="word slide-in" ng-bind="adjective1.word"></span>
+    <span class="hostname" ng-bind="adjective1.hostname"></span>
+  </span>
+  <span class="result noun slide-in">
+    <span class="word" ng-bind="noun1.word"></span>
+    <span class="hostname" ng-bind="noun1.hostname"></span>
+  </span>
+  </div>
+  <div class="line line2 slide-in">
+  <span class="result verb slide-in">
+    <span class="word" ng-bind="verb.word"></span>
+    <span class="hostname" ng-bind="verb.hostname"></span>
+  </span>
+  </div>
+  <div class="line line3 slide-in">
+  <span class="result adjective slide-in">
+    <span class="word" ng-bind="adjective2.word"></span>
+    <span class="hostname" ng-bind="adjective2.hostname"></span>
+  </span>
+  <span class="result noun slide-in">
+    <span class="word" ng-bind="noun2.word"></span>
+    <span class="hostname" ng-bind="noun2.hostname"></span>
+  </span>
+  </div>
+</div>
+
+<div class="footer"><img src="images/homes.png" /></div>
 </body>
 
 <script src="angular.min.js"></script>
